# ecommerce-customer-service-system

./: .gitignore  FIX_500_ERROR.md  QUICK_START.md  README.md  RELEASE_NOTES.md  新人培训手册.md  系统测试分析报告.md
.github/workflows/: ci.yml
docs/: FEATURE_DEFINITION.md  PRD.md  TESTING.md
docs/deployment/: OPERATION_GUIDE.md
frontend/: index.html  mock-server.js  package-lock.json  package.json
frontend/src/: App.vue  main.js
infrastructure/docker-compose/: docker-compose.yml
java-services/: pom.xml  start-all.sh  start-services.sh
java-services/after-sale-service/: pom.xml
java-services/api-gateway/: pom.xml
java-services/auth-service/: pom.xml
java-services/automation-service/: pom.xml
java-services/common/: pom.xml
java-services/crm-service/: pom.xml
java-services/order-service/: pom.xml
java-services/platform-1688/: pom.xml
java-services/platform-douyin/: pom.xml
java-services/platform-xiaohongshu/: pom.xml
java-services/product-service/: pom.xml
java-services/purchase-service/: pom.xml
python-services/: pyproject.toml  requirements.txt
python-services/customer-service/app/: ai_service.py  config.py  database.py  main.py  models.py
python-services/customer-service/app/routers/: chat.py  health.py  knowledge.py
python-services/customer-service/app/schemas/: base.py
python-services/qianniu-plugin/app/: a1688_client.py  qianniu_client.py
scripts/: build-all-services.sh  deploy.sh  health-check.sh  start-all-services.sh  start-all.sh  test-api.sh
sql/: extension.sql  init.sql
tests/: test_purchase_service.py
(+314 files in other folders)
